--- a/nb-blocking-util/Cargo.toml
+++ b/nb-blocking-util/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "nb-blocking-util"
 description = "Utility proc macro for removing all async/await from a function"
-version = "0.10.1"
+version = "0.10.2"
 edition = "2021"
 license = "CC0-1.0"
-repository = "https://github.com/dnbln/nb-rs"
+repository = "https://github.com/nekos-best/nekos-best.rs"
 readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
